# socketplusplus

./: CMakeLists.txt  chat.cpp  chat.hpp  http.cpp  http.hpp  main.cpp
include/: RequestHandler.hpp  request.hpp  scheduler.hpp
lib/: .gitignore  CMakeLists.txt
lib/include/: RequestHandler.hpp  request.hpp  scheduler.hpp  server.hpp
lib/include/server/: scheduler.hpp  server.hpp
lib/include/server/scheduler/: multireactor.hpp
lib/src/: request.cpp  scheduler.cpp  server.cpp
lib/src/scheduler/: multireactor.cpp
src/: request.cpp  server.cpp
